# openrouter_api

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: Overview.md  example.rs
src/: client.rs  error.rs  lib.rs
src/api/: chat.rs  completion.rs  mod.rs  models.rs  request.rs  structured.rs  web_search.rs
src/mcp/: client.rs  context.rs  mod.rs  strategy.rs  types.rs
src/models/: chat.rs  mod.rs  provider_preferences.rs  structured.rs  tool.rs
src/tests/: integration_tests.rs
src/types/: chat.rs  common.rs  completion.rs  mod.rs  models.rs  provider.rs  routing.rs  transform.rs  web_search.rs
src/utils/: auth.rs  mod.rs  validation.rs
